Use `div` for rendering search results instead of `table` to avoid: - unpredictable alignment - slow rendering - uncustomizablity (card-style, etc.) Fixes #3.

--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,35 +1,38 @@
 .Results .ResultBox {
-  overflow-x: auto;
   background-color: #fff;
 }
 
-.Results table {
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 0;
-}
-
 .Results .book {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
-    0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin: 5px 0;
 }
 
 .Results .book.missing {
   background: #faa;
 }
 
-.Results .book td {
-  border: 0px;
-  border-style: none solid solid none;
-  padding: 10px;
+.Results .book div {
+  padding: 3px 0;
 }
 
-.Results .book td div {
-  padding: 3px 0;
+.Results .book > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.Results .book .col15 {
+  width: 15%;
+  padding: 0 5px;
+}
+
+.Results .book .col70 {
+  width: 70%;
+  padding: 10px;
 }
 
 .Results .book .title {
   font-weight: bold;
+  width: 70%;
 }
 
 .Results .book .author,
@@ -38,12 +41,12 @@
 }
 
 .Results .book .subject {
-    font-size: .9rem;
-    font-style: italic;
+  font-size: 0.9rem;
+  font-style: italic;
 }
 
 .Results .book .accno,
-.Results .book .rack, {
+.Results .book .rack {
   text-align: center;
   min-width: 50px;
 }
